# cahp-sim

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  bitpat.c  bitpat.h  cpu.c  cpu.h  elf.h  elf_parser.h  inst.c  inst.h  inst16.inc  inst24.inc  log.c  log.h  main.c  test.sh
src/: CMakeLists.txt  bitpat.c  bitpat.h  cpu.c  cpu.h  elf_parser.c  inst.h  inst16.inc  inst24.inc  log.c  main.c
